added extra user

--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,8 @@ authors: # author details
     icon: shwetankdixit.jpg
     twitter: shwetank
     github: shwetank
+  demonstro:
+    display_name: Christian Magnus Sinding-Larsen
+    icon: 
+    twitter:
+    github:
